# reso_design

./: .gitignore  README.md  old_setup.py  pyproject.toml  setup.py
reso_design/: __init__.py  example_JJ_array.py  junction_resistance.py  reflectometry_resonator.py  reso_design.py  simulation_fits.py
